# voice-picker-ai

./: .env.dev  .env.docker.test  .env.test  .gitignore  AB_TEST_IMPLEMENTATION_GUIDE.md  AB_TEST_USAGE_GUIDE.md  CACHE_FIX_GUIDE.md  CLAUDE.md  Dockerfile  ENVIRONMENT_SETUP.md  LP_ANALYTICS_SYSTEM.md  MACOS_ZOOM_AUDIO_CAPTURE.md  README.md  README_STRIPE_TESTING.md  REAL_ZOOM_AUDIO_CAPTURE.md  STRIPE_INTEGRATION_GUIDE.md  UBUNTU_PRODUCTION_SETUP.md  UBUNTU_SETUP.md  ZOOM_MEETING_BOT_GUIDE.md  ZOOM_SDK_DOWNLOAD.md  celery-worker-guide.md  create_test_meeting.md  cronjob  docker-compose.yaml  manage.py  meeting_debug.sh  nginx_server_config.conf  quick_test.sh  request.py  requirements.in  requirements.txt  run_stripe_tests.py  run_webhook_test.py  test_recording.sh  test_smtp_server.py  zoom_test_guide.md  zoom_web_sdk_implementation.md
.claude/: settings.local.json
ab_test/: admin.py  api_urls.py  apps.py  models.py  security_recommendations.md  serializers.py  urls.py  views.py
analytics/: admin.py  apps.py  models.py  serializers.py  test_sdk.html  urls.py  views.py
config/: api_urls.py  celery.py  logging_handlers.py  settings.py  test_settings.py  urls.py
django_app/: settings.py  urls.py
docs/: ubuntu-optimization.md  zoom_audio_settings.md  zoom_setup_guide.md
google_colab/: transcribe.py
job_seekers/: urls.py  views.py
matching_app/: asgi.py  settings.py  urls.py  wsgi.py
member_management/: admin.py  api_urls.py  api_views.py  forms.py  middleware.py  serializers.py  tasks.py  tests.py  urls.py  views.py  views_flyer.py
scripts/: backup_logs.sh  check_openai_status.py  memory_monitor.service  monitor_memory.sh  setup_static_files.sh  start_webhook_testing.sh
staticfiles/: staticfiles.json
voice_picker/: admin.py  admin_views.py  api_urls.py  apps.py  hls_views.py  serializers.py  tasks.py  urls.py  views.py
zoom_bot_server/: .env.example  (+5 more)
zoom_bot_server/zoom_meeting_sdk/bot_implementation/: CMakeLists.txt  CMakeLists_real.txt  CMakeLists_real_sdk.txt  CMakeLists_sdk.txt  CMakeLists_simple.txt  CMakeLists_working.txt  build_real_sdk.sh  test_config.json  test_pulse_config.json
zoom_bot_server/zoom_meeting_sdk/bot_implementation/build_real/: CMakeCache.txt  CMakeLists.txt  simple_sdk_test
zoom_bot_server/zoom_meeting_sdk/bot_implementation/src/: audio_capture_bot.cpp  audio_recorder.cpp  audio_recorder.h  config_parser.cpp  config_parser.h  gstreamer_audio_bot.cpp  hybrid_zoom_bot.cpp  main.cpp  real_sdk_main.cpp  real_zoom_bot.cpp  real_zoom_sdk_bot.cpp  simple_bot.cpp  simple_recording_bot.cpp  simple_sdk_test.cpp  ubuntu_audio_bot.cpp  zoom_bot.cpp  zoom_bot.h  zoom_sdk_bot.cpp  zoom_sdk_integration.cpp
(+110 files in other folders)
